aba de pesquisa e do dinheiros

--- a/site/html/home.html
+++ b/site/html/home.html
@@ -26,9 +26,9 @@
                 <span>|</span>
                 <li><a target="_self" href="home.html#testeClickId">Teste<br>de Click</a></li>
                 <span>|</span>
-                <li><a href="">Pesquisa</a></li>
+                <li><a target="_self" href="home.html#pesquisaId">Pesquisa</a></li>
                 <span>|</span>
-                <li><a href="">Meu Jogo<br>Clicker</a></li>
+                <li><a target="_self" href="home.html#meuJogoId">Meu Jogo<br>Clicker</a></li>
                 <span>|</span>
             </ul>
         </div>
@@ -177,6 +177,104 @@
 
     <!-- Fim do "Teste de Click" -->
 
+    <!-- Início do "Pesquisa" -->
+
+    <div class="pesquisa" id="pesquisaId">
+        <div class="container">
+            <h1>Pesquisa</h1>
+            <p>
+                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Essa é uma pesquisa voltada para pessoas que jogam ou já jogaram
+                jogos clicker ou idle. Porém, caso você não tenha experiência nenhuma com o assunto, <b>responda pelo
+                    menos a primeira pergunta</b> da pesquisa, isso já ajudará muito no armazenamento dos dados.
+            </p>
+            <br><br>
+            <span class="line">
+                ~~~ /// ~~~ /// ~~~
+            </span>
+            <br><br>
+            <div class="perguntas">
+                <div id="pergunta1" class="perguntasBlock">
+                    <h2>Você joga ou já jogou algum jogo clicker?</h2>
+                    <br><br>
+                    <div class="btns">
+                        <button>Sim</button>
+                        <button>Não</button>
+                    </div>
+                </div>
+                <div id="pergunta2" class="perguntasBlock">
+                    <h2>Há quanto tempo você joga jogos clicker?</h2>
+                    <br><br>
+                    <div class="btns">
+                        <button>Há pouco<br>tempo</button>
+                        <button>Há 1 - 3<br>anos</button>
+                        <button>Há 3 - 6<br>anos</button>
+                        <button>Há mais de 6<br>anos</button>
+                    </div>
+                </div>
+                <div id="pergunta3" class="perguntasBlock">
+                    <h2>Qual o seu jogo clicker preferido?</h2>
+                    <br><br>
+                    <div class="btns">
+                        <button>Cookie<br>Clicker</button>
+                        <button>Clicker<br>Heroes</button>
+                        <button>Adventure<br>Capitalist</button>
+                        <button>Outro</button>
+                    </div>
+                </div>
+                <div id="pergunta4" class="perguntasBlock">
+                    <h2>Qual a coisa mais satisfatória em um jogo clicker?</h2>
+                    <br><br>
+                    <div class="btns">
+                        <button>Ver os números<br>subindo</button>
+                        <button>Comprar novas<br>melhorias</button>
+                        <button>Zerar o<br>jogo</button>
+                        <button>Outro</button>
+                        <button>Não sinto<br>satisfação</button>
+                    </div>
+                </div>
+                <div id="pergunta5" class="perguntasBlock">
+                    <h2>O que mais falta nos jogos clicker?</h2>
+                    <br><br>
+                    <div class="btns">
+                        <button>Novas<br>mecânicas</button>
+                        <button>Mais histórias<br>elaboradas</button>
+                        <button>Mais misturas<br>com outros<br>gêneros de jogos</button>
+                        <button>Maior tempo<br>de jogo</button>
+                        <button>Menor tempo<br>de jogo</button>
+                    </div>
+                </div>
+                <div id="finalizar">
+
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Fim do "Pesquisa" -->
+
+    <!-- Início do "Meu Jogo Clicker" -->
+
+    <div class="meuJogo" id="meuJogoId">
+        <div class="container">
+            <h1>Meu Jogo Clicker</h1>
+            <p>
+                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Desenvolvi um jogo clicker (<b>uma Demo</b>) por diversão e também
+                para tentar aprender o máximo possível de JavaScript e de lógica de programação. Foquei em otimizar o
+                máximo possível de linhas de código
+                e em aprender novos comandos.
+                <br><br>
+                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;O jogo está <b>incompleto</b> (desbalanceado), sem CSS e é o meu
+                <b>primeiro jogo</b> clicker, então por favor pegue leve. <b>Espero que goste!</b>
+                <br><br>
+            <div id="dinheirosClicker">
+                <a target="_blank" href="../dinheirosClicker/game.html">Dinheiros Clicker</a>
+            </div>
+            </p>
+        </div>
+    </div>
+
+    <!-- Fim do "Meu Jogo Clicker" -->
+
     <!-- Início do Footer -->
 
     <div class="footer">
@@ -185,10 +283,11 @@
                 Projeto Individual de Pesquisa e inovação - <b>Jogos Clicker / Idle</b>
             </p>
             <p>
-                <a href="https://github.com/leandroTokudome/Projeto-Individual">Projeto no GitHub</a>
+                <a target="_blank" href="https://github.com/leandroTokudome/Projeto-Individual">Projeto no GitHub</a>
             </p>
             <p>
-                Feito por <b>Leandro Akio Tokudome</b>
+                Feito por <b>Leandro Akio Tokudome</b><br>
+                RA: 02231016
             </p>
         </div>
     </div>
