Telas de LogIn e de Registro

--- a/we-data-viz2/site/public/home.html
+++ b/we-data-viz2/site/public/home.html
@@ -1,4 +1,3 @@
-!
 <!DOCTYPE html>
 <html lang="en">
 
@@ -196,7 +195,7 @@
                 <b>primeiro jogo</b> clicker, então por favor pegue leve. <b>Espero que goste!</b>
                 <br><br>
             <div id="dinheirosClicker">
-                <a target="_blank" href="dinheirosClicker/game.html">Dinheiros Clicker</a>
+                <a href="login.html">Dinheiros Clicker</a>
             </div>
             </p>
         </div>
