feito o salvamento dos dinheiros

--- a/webDataViz/site/public/cadastro.html
+++ b/webDataViz/site/public/cadastro.html
@@ -41,13 +41,13 @@
             <div class="box">
                 <h1>Registrar</h1>
                 <p>Nome:</p>
-                <input type="text" id="nome">
+                <input type="text" id="nome" value="Leandro">
                 <p>Email:</p>
-                <input type="text" id="email">
+                <input type="text" id="email" value="leandro@gmail.com">
                 <p>Senha:</p>
-                <input type="password" id="senha">
+                <input type="password" id="senha" value="123456">
                 <p>Comfirmação de Senha:</p>
-                <input type="password" id="confirmarSenha">
+                <input type="password" id="confirmarSenha" value="123456">
                 <button onclick="cadastrar()">Criar</button>
                 <a href="login.html">Já possuo conta!</a>
             </div>
