--- a/webDataViz/site/public/dinheirosClicker/game.html
+++ b/webDataViz/site/public/dinheirosClicker/game.html
@@ -108,6 +108,8 @@
 
             <button onclick=clickDinheiros() class="buttonClick" id="dinheirosButton" tabindex="-1">$</button>
 
+            <button onclick="salvar()" id="salvar">Salvar pontuação</button>
+
         </div>
 
         <div class="boxRight">
