--- a/webDataViz/site/public/index.html
+++ b/webDataViz/site/public/index.html
@@ -195,7 +195,7 @@
                 <b>primeiro jogo</b> clicker, então por favor pegue leve. <b>Espero que goste!</b>
                 <br><br>
             <div id="dinheirosClicker">
-                <a href="login.html">Dinheiros Clicker</a>
+                <a target="_self" href="login.html">Dinheiros Clicker</a>
             </div>
             </p>
         </div>
