--- a/webDataViz/site/public/login.html
+++ b/webDataViz/site/public/login.html
@@ -43,9 +43,9 @@
             <div class="box">
                 <h1>LogIn</h1>
                 <p>Email:</p>
-                <input type="text" id="email">
+                <input type="text" id="email" value="leandro@gmail.com">
                 <p>Senha:</p>
-                <input type="password" id="senha">
+                <input type="password" id="senha" value="123456">
                 <button onclick="entrar()">Entrar</button>
                 <a href="cadastro.html">Crie sua Conta Aqui!</a>
             </div>
