--- a/webDataViz/site/public/index.html
+++ b/webDataViz/site/public/index.html
@@ -30,6 +30,8 @@
                 <span>|</span>
                 <li><a target="_self" href="index.html#meuJogoId">Meu Jogo<br>Clicker</a></li>
                 <span>|</span>
+                <li><a target="_self" href="rank.html">Rank</a></li>
+                <span>|</span>
             </ul>
         </div>
     </div>
