css do Dinheiros Clicker e finalizações estéticas do site

--- a/webDataViz/site/public/index.html
+++ b/webDataViz/site/public/index.html
@@ -69,6 +69,8 @@
                 e para explicar um pouco da minha <b>paixão</b> pelos <b>Jogos Clicker</b>, tudo feito com muito
                 <b>carinho</b>, e visando uma <b>boa nota</b> acadêmica.
             </p>
+            <br><br>
+            <img src="images/codeWallpaper.jpg">
         </div>
     </div>
 
@@ -106,9 +108,7 @@
                 <span>adorar</span> e se viciar em clicar e
                 ficar ainda mais rico (no jogo).
                 <br><br>
-                <span class="line">
-                    ~~~ /// ~~~ /// ~~~
-                </span>
+                <img src="images/adventureCapitalistWallpaper.jpg">
                 <br><br>
                 <b class="subTitulo">Eu e os Jogos Clicker:</b>
                 <br><br>
@@ -132,9 +132,7 @@
                 sempre algum <span>objetivo a cumprir</span> e algo
                 para <span>aprimorar</span> nos jogos clicker.
                 <br><br>
-                <span class="line">
-                    ~~~ /// ~~~ /// ~~~
-                </span>
+                <img src="images/cookieClickerWallpaper.jpg">
                 <br><br>
                 <b class="subTitulo">Recomendações:</b>
                 <br><br>
@@ -193,8 +191,10 @@
                 máximo possível de linhas de código
                 e em aprender novos comandos.
                 <br><br>
-                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;O jogo está <b>incompleto</b> (desbalanceado), sem CSS e é o meu
-                <b>primeiro jogo</b> clicker, então por favor pegue leve. <b>Espero que goste!</b>
+                <img src="images/dinheirosWallpaperjpg.jpg">
+                <br><br>
+                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;O jogo está <b>incompleto</b> (desbalanceado) e é o meu
+                <b>primeiro jogo</b> clicker, então por favor pegue leve. <b>Divirta-se</b> e <b>espero que goste!</b>
                 <br><br>
             <div id="dinheirosClicker">
                 <a target="_self" href="login.html">Dinheiros Clicker</a>
