--- a/webDataViz/site/public/rank.html
+++ b/webDataViz/site/public/rank.html
@@ -43,7 +43,8 @@
     <div class="rank">
         <div class="container">
             <h1>
-                Rank do Dinheiros Clicker
+                Rank do Dinheiros Clicker<br>
+                (Top 3)
             </h1>
             <canvas id="myChart"></canvas>
         </div>
