mudança no dinheirosClicker

--- a/webDataViz/site/public/index.html
+++ b/webDataViz/site/public/index.html
@@ -197,7 +197,7 @@
                 <b>primeiro jogo</b> clicker, então por favor pegue leve. <b>Divirta-se</b> e <b>espero que goste!</b>
                 <br><br>
             <div id="dinheirosClicker">
-                <a target="_self" href="login.html">Dinheiros Clicker</a>
+                <a target="_blank" href="login.html">Dinheiros Clicker</a>
             </div>
             </p>
         </div>
